# lzplayer

./: README.md  TODO.md  build.gradle  gradle.properties  lzplayer_core_analysis_and_refactoring.md  settings.gradle
MediaPipeline/: build.gradle
lzplayer_core/src/main/cpp/: AudioOpenSLESOutput.cpp  AudioOpenSLESOutput.h  CMakeLists.txt  VEAVsync.cpp  VEAVsync.h  VEAudioDecoder.cpp  VEAudioDecoder.h  VEAudioRender.cpp  VEAudioRender.h  VEDemux.cpp  VEDemux.h  VEFrame.h  VEJvmOnLoad.cpp  VEJvmOnLoad.h  VEMediaClock.cpp  VEMediaClock.h  VEPacket.h  VEPlayer.cpp  VEPlayer.h  VEPlayerDirver.cpp  VEPlayerDirver.h  VERingBuffer.cpp  VERingBuffer.h  VEVideoDecoder.cpp  VEVideoDecoder.h  VEVideoRender.cpp  VEVideoRender.h  lzplayer_core.cpp  native_PlayerInterface.cpp  native_PlayerInterface.h  native_VEPlayer.cpp
lzplayer_core/src/main/cpp/core/: AudioOpenSLESOutput.cpp  AudioOpenSLESOutput.h  JniString.h  VEAVsync.cpp  VEAVsync.h  VEAudioDecoder.cpp  VEAudioDecoder.h  VEAudioRender.cpp  VEAudioRender.h  VEDemux.cpp  VEDemux.h  VEFrame.h  VEFrameQueue.cpp  VEFrameQueue.h  VEJvmOnLoad.cpp  VEJvmOnLoad.h  VEMediaClock.cpp  VEMediaClock.h  VEMediaDef.h  VEMessageType.h  VEPacket.h  VEPacketQueue.cpp  VEPacketQueue.h  VEPlayer.cpp  VEPlayer.h  VEPlayerContext.h  VEPlayerDirver.cpp  VEPlayerDirver.h  VEPlayerDriver.cpp  VEPlayerDriver.h  VERingBuffer.h  VEVideoDecoder.cpp  VEVideoDecoder.h  VEVideoDisplay.cpp  VEVideoDisplay.h  VEVideoRender.cpp  VEVideoRender.h  native_PlayerInterface.cpp  native_PlayerInterface.h
lzplayer_core/src/main/cpp/include/ffmpeg/libavcodec/: avcodec.h
lzplayer_core/src/main/cpp/include/ffmpeg/libavfilter/: avfilter.h
lzplayer_core/src/main/cpp/include/ffmpeg/libavformat/: avformat.h
lzplayer_core/src/main/cpp/include/ffmpeg/libavutil/: bprint.h  encryption_info.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  hwcontext_vulkan.h  tx.h
lzplayer_core/src/main/cpp/include/libyuv/libyuv/: cpu_id.h
lzplayer_core/src/main/cpp/include/openssl/: configuration.h  evp.h
lzplayer_core/src/main/cpp/interface/: IAudioRender.h  IMediaDecoder.h  IVEComponent.h  IVideoRender.h
lzplayer_core/src/main/cpp/platform/: VEAudioSLESRender.h  VEOpenGLESRender.h
lzplayer_core/src/main/cpp/platform/android/: VEAudioSLESRender.cpp  VEAudioSLESRender.h  VEMediaCodecDecoder.cpp  VEOpenGLESRender.cpp  VEOpenGLESRender.h
lzplayer_core/src/main/cpp/thread/: ADebug.h  AHandler.cpp  ALooper.cpp  ALooper.h  ALooperRoster.cpp  ALooperRoster.h  AMessage.cpp  Errors.h
lzplayer_core/src/main/cpp/utils/: ADebug.h  AHandler.cpp  AHandler.h  ALooper.cpp  ALooper.h  ALooperRoster.cpp  ALooperRoster.h  AMessage.cpp  AMessage.h  Any.h  Errors.h  JNIHelpers.cpp  JNIHelpers.h  Log.h  ScopedUtfChars.h  TimeUtils.cpp  TimeUtils.h  VEBundle.h  VEDef.h  VEError.h  VETrace.cpp  VETrace.h  main.cpp  nativehelper_utils.h
(+81 files in other folders)
